--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -9,7 +9,11 @@
         android:id="@+id/screen1Fragment"
         android:name="com.example.swapptest.presentation.screen1.Screen1Fragment"
         android:label="fragment_screen1"
-        tools:layout="@layout/fragment_screen1" />
+        tools:layout="@layout/fragment_screen1" >
+        <action
+            android:id="@+id/action_screen1Fragment_to_screen2Fragment"
+            app:destination="@id/screen2Fragment" />
+    </fragment>
     <fragment
         android:id="@+id/screen2Fragment"
         android:name="com.example.swapptest.presentation.screen2.Screen2Fragment"
